# hatejs

./: .env.local.example  .prettierrc  package.json  tailwind.config.js
@types/: next-auth.d.ts
admin_cli/: .env.example  Cargo.toml  build.rs
admin_cli/src/: args.rs  main.rs
components/: button.tsx  footer.tsx  header.tsx  post_listing.tsx
pages/: _app.tsx  index.tsx
pages/api/auth/: [...nextauth].ts
pages/api/trpc/: [trpc].ts
pages/blog/: [slug].tsx  index.tsx
pages/panel/: index.tsx  login.tsx
styles/: globals.css
utils/: redis.ts  types.ts  use_require_auth.ts  user_context.tsx
