[package]
name = "admin_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version= "4.0.30", features = ["derive"] }
redis = { version = "0.22.1", features = ["tokio-comp", "tokio-native-tls-comp", "ahash"] }
reqwest = "0.11.13"
tokio = { version = "1.23.0", features = ["full"] }

[build-dependencies]
dotenv-build = "0.1.1"
